bk_ida/gobmkida/c1/have_common_lib
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/have_common_lib/src/engine/board.c:2582:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[v15] == v13 && string[239].neighborlist[v15 + 160] == string_number[v6] 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/have_common_lib/src/engine/board.c:2583:4: error: use of undeclared identifier 'byte_9AA88C'
|| byte_9AA88C[v15] == v13 && string[239].neighborlist[v15 + 141] == string_number[v6] 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/have_common_lib/src/obj/1/board.o] Error 1
